--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "@astrolib/analytics": "^0.6.1",
     "@astrolib/seo": "^1.0.0-beta.8",
     "@fontsource-variable/inter": "^5.2.6",
+    "@fontsource/nunito": "^5.2.7",
+    "@fontsource/poppins": "^5.2.7",
+    "@fontsource/roboto": "^5.2.8",
     "astro": "^5.12.9",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.5",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "lottie-web": "^5.13.0",
     "unpic": "^4.1.3"
   },
   "devDependencies": {
